--- a/admin/admin html/products/product-upload.html
+++ b/admin/admin html/products/product-upload.html
@@ -35,9 +35,9 @@
         <label class="input-field">Select Category</label>
         <br>
         <select class="category-for-shop" id="category" required>
-            <option value="cloth" id="clothing">Clothing</option>
-            <option value="access" id="accessories">Accessories</option>
-            <option value="home" id="home">Home</option>
+            <option value="Clothing" id="clothing">Clothing</option>
+            <option value="Accessories" id="accessories">Accessories</option>
+            <option value="Home" id="home">Home</option>
         </select>
 <br>
         <label class="input-field">Product Name</label>
