--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -303,32 +303,10 @@
 	</div>
 
 
-<div class="address-open-hours-contact" style="display: none;">	
-<div class="address">
-	<h3>Location</h3>
-	<p>11113 W Baldwin RD, Monrovia, MD 21770, United States of America.</p>
-</div>
-
-<div class="open-hours">
-	<h3>Open Hours</h3>
-	<p>
-		Weekdays: 09.30 am - 06:00 pm.<br>
-		Weekends and Holidays: 09.30 am - 06.30 pm.
-	</p>
-</div>
-
-<div class="contact-for-more">
-	<h3>Contact</h3>
-	<p>+1 860 817 1080</p>
-	<p>info@globalfuncity.in</p>
-</div>
-</div>
 
 
 
-
-
-
+<div class="shop-footer-main">
     <div class="navbar-footer">
 		<ul>
 			<li> <a class="navigation__link" href="../../pages/other pages/home.html"> ABOUT US </a> </li>
@@ -343,16 +321,27 @@
 
 	</div>
 
+<div class="shop-footer">
+	<ul>
+		<li> <a href="">ABOUT SHOPGLOBAL</a></li>
+		<li> <a href="">ORDER TRACKING</a></li>
+		<li> <a href="">GUEST SERVICES</a></li>
+		<li> <a href="">ACCOUNT INFO</a></li>
+		<li> <a href="">AFFILICATE PROGRAM</a></li>
+	</ul>
+</div>
+
 <div class="other-navbar-footer">
 	<ul>
 		<li> <a class="other-navigation-link" href="../../pages/footer other pages/privacypolicy.html">PRIVACY POLICY</a></li>
+		<li> <a class="other-navigation-link" href="">CAREERS</a></li>
         <li> <a class="other-navigation-link" href="../../pages/footer other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
 		<li> <a class="other-navigation-link" href="../../pages/footer other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
 		<li> <a class="other-navigation-link" href="../../pages/footer other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
 		<li> <a class="other-navigation-link" href="../../pages/footer other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
 	</ul>
 </div>
-
+</div>
 	<div class="social-medias">
 		<div class="facebook">
 		<a href="#"><i class="fab fa-facebook-f"></i></a>
