--- a/pages/signup for booking/create-an-account.html
+++ b/pages/signup for booking/create-an-account.html
@@ -42,12 +42,11 @@
              &nbsp;
             <input type="password" id="re_enter_password" placeholder="Re-Enter Password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&amp;*_=+-]).{8,24}$" maxlength="10" minlength="8" 
             title="Please give one uppercase, one lowercase, one special character and one number miniumum is 8 character maximum is 10 characters" required="true"  /> &nbsp;
-            <input onfocus="(this.type = 'date')" id="date" placeholder="Date of Birth" required="true"/>
    
     </div> 
     &nbsp;     
     <div class="right-checkbox">  
-            <input type="checkbox" id="right" name="right" value="right" required>
+            <input type="checkbox" id="right" name="right" value="right">
             <label for="right">Yes! I would like to receive updates, special offers, and other information from Global Fun City & Resorts businesses.</label>
     </div>
     &nbsp;
