--- a/admin/admin html/admin/admin_index.html
+++ b/admin/admin html/admin/admin_index.html
@@ -22,13 +22,13 @@
             <img src="../../../assets/images/globalfuncitylogo.png" alt="">
             <ul class="center-nav">
                 <li><i class="fa-solid fa-house"></i><a href="#"> Dashboard </a></li>
-                <li><i class="fa-solid fa-copy"></i><a href="#"> Content </a></li>
-                <li><i class="fa-sharp fa-solid fa-chart-simple"></i><a href="#"> Analytics </a></li>
-                <li><i class="fa-solid fa-thumbs-up"></i><a href="#"> Likes </a></li>
-                <li><i class="fa-solid fa-comment"></i><a href="#"> Comments </a></li>
-                <li><i class="fa-sharp fa-solid fa-floppy-disk"></i><a href="#"> Saves </a></li>
-                <li><i class="fa-solid fa-share"></i><a href="#"> Share </a></li>
-                <li><i class="fa-solid fa-rectangle-ad"></i><a href="#"> Ads </a></li>
+                <li><i class="fa-solid fa-copy"></i><a href="../../../admin/admin html/products/product-upload.html"> Product Upload </a></li>
+                <li><i class="fa-sharp fa-solid fa-chart-simple"></i><a href="../../../admin/admin html/products/product-update.html"> Product Upload </a></li>
+                <li><i class="fa-solid fa-thumbs-up"></i><a href="../../../admin/admin html/offers/offer-upload.html"> Offer Upload </a></li>
+                <li><i class="fa-solid fa-comment"></i><a href="../../../admin/admin html/offers/offer-update.html"> Offer Update </a></li>
+                <li><i class="fa-sharp fa-solid fa-floppy-disk"></i><a href="../../../admin/admin html/events/event-upload.html"> Event Upload </a></li>
+                <li><i class="fa-solid fa-share"></i><a href="../../../admin/admin html/events/event-update.html"> Event Update </a></li>
+                <li><i class="fa-solid fa-rectangle-ad"></i><a href="../../../admin/admin html/attractions/attractions-upload.html"> Attraction Upload </a></li>
             </ul>
             <ul class="bottom-nav">
                 <hr>
