--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>	
 
 <div class="sign-in">
-	<p><a href="./pages/signup for booking/signup.html"> Sign In </a> | <a href="./pages/signup for booking/create-an-account.html"> Create Account</a>  | <i class="fa-solid fa-globe"></i> United states (English)</p>
+	<p><a href="./admin/admin html/admin/admin_main.html">Admin</a> <a href="./pages/signup for booking/signup.html"> Sign In </a> | <a href="./pages/signup for booking/create-an-account.html"> Create Account</a>  | <i class="fa-solid fa-globe"></i> United states (English)</p>
 </div>
 
 </div>
@@ -260,6 +260,16 @@ Enjoy scrumptious meals at Global Fun City.</p>
 	<div class="copyright">
 	<p>Global Fun City &#169; 2022. All rights Reserved.
         <br>Site designed by Vignesh.in</p>
+	</div>
+
+	<div class="admin">
+		<a href="./admin/admin html/products/product-upload.html">Product Upload</a>
+		<a href="./admin/admin html/products/product-update.html">Product Update</a>
+		<a href="./admin/admin html/offers/offer-upload.html">Offer Upload</a>
+		<a href="./admin/admin html/offers/offer-update.html">Offer Update</a>
+		<a href="./admin/admin html/events/event-upload.html">Event Upload</a>
+		<a href="./admin/admin html/events/event-update.html">Event Update</a>
+		<a href="./admin/admin html/attractions/attractions-upload.html">Attractions Upload</a>
 	</div>
 </footer>
 
