--- a/pages/other pages/contact.html
+++ b/pages/other pages/contact.html
@@ -75,21 +75,21 @@ info@globalfuncity.com
 	<div class="part1">
 	<form role="form" class="contact-admin" onsubmit="contactFormData(event)">
 	<i class="fa-solid fa-user"> <input class="input-field-for-contact" id="name" type="text" placeholder="Name" required pattern="[a-zA-Z]+"/> </i> &nbsp;
-	<i class="fa-solid fa-phone"> <input class="input-field-for-contact" id="phone" type="tel" placeholder="Phone" required pattern="[0-9]{10}"/> </i>
+	<i class="fa-solid fa-phone"> <input class="input-field-for-contact" id="phone" type="tel" placeholder="Phone" required pattern="[0-9]{10}" minlength="10" maxlength="10"/> </i>
 	</div>
 	<div class="part2">
-		<i class="fa-solid fa-envelope"><input class="input-field-for-contact" id="email" type="email" placeholder="Email Address" required/></i> &nbsp; &nbsp;
+		<i class="fa-solid fa-envelope"><input class="input-field-for-contact" id="email" type="email" placeholder="Email Address" pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$" required/></i> &nbsp; &nbsp;
 		<i class="fa-solid fa-info"><input class="input-field-for-contact" id="subject" type="text" placeholder="Subject" required/> </i>
 	</div>
 	<div class="part3">
 		<i class="fa-solid fa-pen"><input class="input-field-for-contact" id="message" type="text" placeholder="How can I help you? Feel free to get in touch!" required/> </i>
     </div>
 </div>
-</form>
+
 </section>
 
 <button class="get-in-touch" id="getInTouchBtn" type="submit"> <i class="fa-regular fa-paper-plane"></i> &nbsp;Get in touch </button>
-	
+</form>
 
 <!-- faq started -->
 <div class="background">
