--- a/admin/admin html/events/event-upload.html
+++ b/admin/admin html/events/event-upload.html
@@ -122,7 +122,7 @@
         </div>
     </section>
 
-    <div class="event-show"> Events</div>
+    <!-- <div class="event-show"> Events</div> -->
 
     <script>
 
