--- a/pages/signup for booking/create-an-account.html
+++ b/pages/signup for booking/create-an-account.html
@@ -33,7 +33,7 @@
             <input type="text" id="first_name" placeholder="First Name" required="true" pattern="[a-zA-Z]+" /> &nbsp;
             <input type="text" id="middle_name" placeholder="Middle Name (optional)" pattern="[a-zA-Z]+"/> &nbsp;
             <input type="text" id="last_name" placeholder="Last Name" required="true" pattern="[a-zA-Z]+"/> &nbsp;
-            <input type="email" id="email" placeholder="Email Address" required="true" /> &nbsp;
+            <input type="email" id="email" placeholder="Email Address" pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$" required="true" /> &nbsp;
             <input type="password" id="password" placeholder="Password"  pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&amp;*_=+-]).{8,24}$" maxlength="10" minlength="8" 
             title="Please give one uppercase, one lowercase, one special character and one number miniumum is 8 character maximum is 10 characters"  required="true" /> &nbsp;
             <span class="pattern_for_password" id="patternPassword" style="display: inline-block; width: 300px; font-family: 'poppins', sans-serif; font-size: 0.8rem;">
@@ -43,8 +43,7 @@
             <input type="password" id="re_enter_password" placeholder="Re-Enter Password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&amp;*_=+-]).{8,24}$" maxlength="10" minlength="8" 
             title="Please give one uppercase, one lowercase, one special character and one number miniumum is 8 character maximum is 10 characters" required="true"  /> &nbsp;
    
-    </div> 
-    &nbsp;     
+    </div>     
     <div class="right-checkbox">  
             <input type="checkbox" id="right" name="right" value="right">
             <label for="right">Yes! I would like to receive updates, special offers, and other information from Global Fun City & Resorts businesses.</label>
