--- a/admin/admin html/admin/admin_index.html
+++ b/admin/admin html/admin/admin_index.html
@@ -23,7 +23,7 @@
             <ul class="center-nav">
                 <li><i class="fa-solid fa-house"></i><a href="#"> Dashboard </a></li>
                 <li><i class="fa-solid fa-copy"></i><a href="../../../admin/admin html/products/product-upload.html"> Product Upload </a></li>
-                <li><i class="fa-sharp fa-solid fa-chart-simple"></i><a href="../../../admin/admin html/products/product-update.html"> Product Upload </a></li>
+                <li><i class="fa-sharp fa-solid fa-chart-simple"></i><a href="../../../admin/admin html/products/product-update.html"> Product Update </a></li>
                 <li><i class="fa-solid fa-thumbs-up"></i><a href="../../../admin/admin html/offers/offer-upload.html"> Offer Upload </a></li>
                 <li><i class="fa-solid fa-comment"></i><a href="../../../admin/admin html/offers/offer-update.html"> Offer Update </a></li>
                 <li><i class="fa-sharp fa-solid fa-floppy-disk"></i><a href="../../../admin/admin html/events/event-upload.html"> Event Upload </a></li>
