--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>	
 
 <div class="sign-in">
-	<p><a href="./admin/admin html/admin/admin_main.html">Admin</a> <a href="./pages/signup for booking/signup.html"> Sign In </a> | <a href="./pages/signup for booking/create-an-account.html"> Create Account</a>  | <i class="fa-solid fa-globe"></i> United states (English)</p>
+	<p><a href="./admin/admin html/admin/admin_main.html">Admin</a> | <a href="./pages/signup for booking/signup.html"> Sign In </a> | <a href="./pages/signup for booking/create-an-account.html"> Create Account</a>  | <i class="fa-solid fa-globe"></i> United states (English)</p>
 </div>
 
 </div>
