--- a/pages/shop/proceedcheckout.html
+++ b/pages/shop/proceedcheckout.html
@@ -1,152 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<meta charset='UTF-8'>
-	<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
-<title> Checkout - Completed - Global Fun City</title>
-<link rel="stylesheet" href="../../assets/store css/proceedcheckout.css" />
+    <head>
+        <meta charset="UTF-8">
+        <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
+        <title> Checkout - Completed - Global Fun City</title>
+        <link rel="stylesheet" href="../../assets/store css/proceedcheckout.css">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nanum+Pen+Script&family=Open+Sans:wght@700&family=Poppins:wght@300;500&family=Reem+Kufi&family=Sacramento&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nanum+Pen+Script&family=Open+Sans:wght@700&family=Poppins:wght@300;500&family=Reem+Kufi&family=Sacramento&display=swap" rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
-</head>
-<body>
+    </head>
+    <body>
 
-	<div class="bag">
-		<a href="../../pages/shop/cart.html"> <h3> <i class="fa-solid fa-angle-left"></i> My Bag </h3> </a>
-	 </div>
+        <div class="bag">
+            <a href="../../pages/shop/cart.html">
+                <h3>
+                    <i class="fa-solid fa-angle-left"></i> My Bag 
+                </h3> 
+            </a>
+        </div>
 	 
-	 <div class="shop-logo">
-		 <img src="../../assets/images/global-shop-logo.png" width="250" alt="shop-logo"/>
-	 </div>
+        <div class="shop-logo">
+            <img src="../../assets/images/global-shop-logo.png" width="250" alt="shop-logo">
+        </div>
 
-<div class="congrats-image">
-<div class="congrats-delivery">
-<div class="congrats">
-    <h2>Congratulations! &#129395;</h2>
-    <p>Your Order will be delivered soon...</p>
-	<p>Check your orders in your Profile</p>
-</div>
-&nbsp;
-<div class="delivery">
-    <h3>Delivery address</h3>
-	<p>Vinay</p>
-    <p>26/2  James road, Den city,
-        New York, United States of America </p>
-    <p>Phone number: +1 8608171080</p>
-	</div>
-&nbsp;
-	<div class="status">
-		<h3>Status</h3>
-		<p>Delivery expected by Jan 01 2023</p>
-		<a href="../../pages/homepage/main.profile.html"> <button class="btn-cancel">Check Your Orders</button></a>
-		<a href="../../pages/shop/shop.html"> <button class="btn-cancel">Cancel Order</button></a>
-	</div>
-</div>
+        <div class="congrats-image">
+            <div class="congrats-delivery">
+                <div class="congrats">
+                    <h2>Congratulations! &#129395;</h2>
+                    <p>Your Order will be delivered soon...</p>
+                    <p>Check your orders in your Profile</p>
+                </div>
+                &nbsp;
+                <div class="delivery">
+                    <h3>Delivery address</h3>
+                    <p>Vinay</p>
+                    <p>26/2  James road, Den city,
+                        New York, United States of America </p>
+                    <p>Phone number: +1 8608171080</p>
+                </div>
+                &nbsp;
+                <div class="status">
+                    <h3>Status</h3>
+                    <p>Delivery expected by Jan 01 2023</p>
+                    <a href="../../pages/homepage/main.profile.html">
+                        <button class="btn-cancel">Check Your Orders</button>
+                    </a>
+                    <a href="../../pages/shop/shop.html">
+                        <button class="btn-cancel">Cancel Order</button>
+                    </a>
+                </div>
+            </div>
 
+            <div class="photo">
+                <img src="../../assets/images/delivery.png" width="500px" height="500px" alt="image-of-delivery">
+            </div>
+        </div>
 
+        <footer>
+            <div class="logo">
+                <img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo">
+            </div>
 
-<div class="photo">
-    <img src="../../assets/images/delivery.png" width="500px" height="500px" alt="image-of-delivery"/>
-</div>
-</div>
+            <div class="address-open-hours-contact">	
+                <div class="address">
+                    <h3>Location</h3>
+                    <p>11113 W Baldwin RD, Monrovia, MD 21770, United States of America.</p>
+                </div>
 
-<footer>
-    <div class="logo">
-		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
-	</div>
+                <div class="open-hours">
+                    <h3>Open Hours</h3>
+                    <p>
+                        Weekdays: 09.30 am - 06:00 pm.<br>
+                        Weekends and Holidays: 09.30 am - 06.30 pm.
+                    </p>
+                </div>
 
+                <div class="contact-for-more">
+                    <h3>Contact</h3>
+                    <p>+1 860 817 1080</p>
+                    <p>info@globalfuncity.in</p>
+                </div>
+            </div>
 
-<div class="address-open-hours-contact">	
-<div class="address">
-	<h3>Location</h3>
-	<p>11113 W Baldwin RD, Monrovia, MD 21770, United States of America.</p>
-</div>
+            <div class="navbar-footer">
+                <ul>
+                    <li>
+                        <a class="navigation__link" href="../../pages/other pages/home.html"> ABOUT US </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/other pages/events.html"> EVENTS  </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/other pages/offer.html"> OFFERS  </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> TICKET  PRICES </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/shop/shop.html"> SHOP </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/other pages/attractions.html"> ATTRACTIONS </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/other pages/contact.html"> CONTACT  </a> 
+                    </li>
+                </ul>
 
-<div class="open-hours">
-	<h3>Open Hours</h3>
-	<p>
-		Weekdays: 09.30 am - 06:00 pm.<br>
-		Weekends and Holidays: 09.30 am - 06.30 pm.
-	</p>
-</div>
+            </div>
 
-<div class="contact-for-more">
-	<h3>Contact</h3>
-	<p>+1 860 817 1080</p>
-	<p>info@globalfuncity.in</p>
-</div>
-</div>
+            <div class="other-navbar-footer">
+                <ul>
+                    <li>
+                        <a class="other-navigation-link" href="../../pages/other pages/privacypolicy.html">PRIVACY POLICY</a>
+                    </li>
+                    <li>
+                        <a class="other-navigation-link" href="../../pages/other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a>
+                    </li>
+                    <li>
+                        <a class="other-navigation-link" href="../../pages/other pages/rulesandregulations.html">RULES & REGULTIONS</a>
+                    </li>
+                    <li>
+                        <a class="other-navigation-link" href="../../pages/other pages/greeninitiatives.html">GREEN INITIATIVES</a>
+                    </li>
+                    <li>
+                        <a class="other-navigation-link" href="../../pages/other pages/csrinitiatives.html">CSR INITIATIVES</a>
+                    </li>
+                </ul>
+            </div>
 
+            <div class="social-medias">
+                <div class="facebook">
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </div>
 
+                <div class="twitter">
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </div>
 
-
-
-
-    <div class="navbar-footer">
-		<ul>
-			<li> <a class="navigation__link" href="../../pages/other pages/home.html"> ABOUT US </a> </li>
-			<li> <a class="navigation__link" href="../../pages/other pages/events.html"> EVENTS  </a> </li>
-			<li> <a class="navigation__link" href="../../pages/other pages/offer.html"> OFFERS  </a> </li>
-			<li> <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> TICKET  PRICES </a> </li>
-			<li> <a class="navigation__link" href="../../pages/shop/shop.html"> SHOP </a> </li>
-			<li> <a class="navigation__link" href="../../pages/other pages/attractions.html"> ATTRACTIONS </a> </li>
-			<li> <a class="navigation__link" href="../../pages/other pages/contact.html"> CONTACT  </a> </li>
-		</ul>
-
-
-	</div>
-
-<div class="other-navbar-footer">
-	<ul>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/privacypolicy.html">PRIVACY POLICY</a></li>
-        <li> <a class="other-navigation-link" href="../../pages/other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
-	</ul>
-</div>
-
-	<div class="social-medias">
-		<div class="facebook">
-		<a href="#"><i class="fab fa-facebook-f"></i></a>
-		</div>
-
-		<div class="twitter">
-	    <a href="#"><i class="fab fa-twitter"></i></a>
-		</div>
-
-		<div class="pinterest">
-		<a href="#"><i class="fab fa-pinterest"></i></a>
-		</div>
+                <div class="pinterest">
+                    <a href="#">
+                        <i class="fab fa-pinterest"></i>
+                    </a>
+                </div>
 	
-		<div class="instagram">
-	    <a href="#"><i class="fab fa-instagram"></i></a>
-		</div>
+                <div class="instagram">
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
 
-		<div class="youtube">
-		<a href="#"><i class="fab fa-youtube"></i></a>
-		</div>
-	
-
-		
+                <div class="youtube">
+                    <a href="#">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
 	    
-	</div>
-	<hr>
-	<div class="copyright">
-	<p>Global Fun City &#169; 2022. All rights Reserved.
-        <br>Site designed by Vignesh.in</p>
-	</div>
-</footer>
+            </div>
+            <hr>
+            <div class="copyright">
+                <p>Global Fun City &#169; 2022. All rights Reserved.
+                    <br>Site designed by Vignesh.in
+                </p>
+            </div>
+        </footer>
 
-
-</body>
+    </body>
 </html>
